# pmrplatform

./: .env  .gitignore  Cargo.toml  README.md  pmrac.sh  pmrapp.sh  sqlx-data.json  sync-pmr-core.sh
collection_json/: Cargo.toml
collection_json/src/: builder.rs  lib.rs
collection_json/tests/: serde.rs
pmr2-migration/: Cargo.toml  README.md  pdbg_exposure_export.py  pdbg_workspace_export.py
pmrac/: Cargo.toml  README.md
pmrac/src/: axum_login.rs  error.rs  lib.rs  password.rs  platform.rs  session.rs  user.rs
pmrac/tests/: test_platform.rs
pmrapp/: Cargo.toml  README.md  package.json  webpack.config.js
pmrapp/e2e/: Cargo.toml
pmrapp/public/: highlight-bundle.min.js
pmrapp/src/: ac.rs  app.rs  client.rs  component.rs  conf.rs  enforcement.rs  error.rs  error_template.rs  exposure.rs  index.js  lib.rs  listing.rs  main.rs  openapi.rs  server.rs  view.rs  workspace.rs
pmrapp/style/: _argon_sds_archive.scss  main.scss
pmrbin/: Cargo.toml
pmrbin/src/: citation.rs  error.rs  lib.rs
pmrbin/tests/: test_cellml.rs  test_citation.rs
pmrcore/: Cargo.toml  README.md
pmrcore/src/: ac.rs  alias.rs  citation.rs  error.rs  exposure.rs  git.rs  idgen.rs  index.rs  jsonld.rs  lib.rs  platform.rs  profile.rs  repo.rs  task.rs  task_template.rs  workspace.rs
pmrcore/tests/: index_backend.rs  test_alias.rs  test_exposure_refs.rs  test_task_refs.rs  test_types.rs
pmrctrl/: Cargo.toml
pmrctrl/src/: error.rs  executor.rs  handle.rs  lib.rs  platform.rs  registry.rs  test.rs  testing.rs
pmrctrl/tests/: pmrctrl_test.rs
pmrdb/: Cargo.toml
pmrdb/src/: lib.rs
pmrdb_sqlite/: Cargo.toml
pmrdb_sqlite/.sqlx/: query-01a6f8ed1e20299b5507774b2b915762d6d33ca378d881b883f31eb9e5dca3a8.json  query-03220554abf4125aacfa87080b03cb775001d9f0faeea7537ba759224c148725.json  query-07623d23803329a48501b34ec30080da98033c553200da7b09896e884c2b7140.json  query-087efcaf925952c0e481d1214494f93ab43532885c643d57c56a57e0a1f77527.json  query-0a0ed5da607fa00a0bfa53fbf890ee8b9d757d0671073a96b0597a079fb0a218.json  query-0a9e9976cf3ae01ee440fd3fb9e47698d600ab6fc056fb45409e9e8695fe8617.json  query-0cbdae62fe5dff3841bf249c572a2d78a0d823c194ed69f043364e5c1de37d17.json  query-0eb01a9df9026601866a23f4f0b4f5e2fcf7378fc73066cea752ba029d640214.json  query-10b05007305fbc3c39c2ea1d91cd35202f343bf980409874277d7b8bcf62ea56.json  query-1198911214ebc63fcfcabc17c8746d6e48c7449e8072380a69f33e45eaeef789.json  query-12bb4719588c2a7620abbd092e1b2789501c07bef42ed43a9e65f213f37d69dc.json  query-16e338ab9d951e9ff92eca6605bea66c0b8e808f97a04c51866cb500b2fdb50c.json  query-1b5528d8b9149bd5e0e4731d333fb11fe0f72a6d80deb743859cc6a3414d2dcc.json  query-1bde419968349742705be757b594a1ff1011a31a0aec46b941d7ebb778767135.json  query-1c211ea64f0ed033d9527833b75bb149ea61bc9d972c6793c9878b09eadb2e5c.json  query-1cb8790a3af303fdc46ee9231fd7b6c3bf4ceaced8fba83bbad065bc9e2aba27.json  query-1db4298300de1e6c76c8736aaf5328ca320bd11566467b12ca78fb54cf390889.json  query-1fe547bd31e603ba2fd38cbcbfa084e0e3849a442c5d9444669eefd24413e899.json  query-23afd05aa8c713c437665d50ea2d91c189ed7945da0fabe2eec7bb3916ccc7b8.json  query-26b1960c301656c56b9a2fe6bb8048904eb72df61f056500646f5d108deb61cc.json  query-28c154ff16d793ec3944781e2771f600f9a96659f9c27094cd6b268434b695d8.json  query-2c79cc7a47cd90de3b919cdda3d86bbbe0d99896bdc2adc87923d652806dfdf0.json  query-36af036a3ef604d3369b170d617117d2eaceef955f0f0572f5d9e2fe3ffbf176.json  query-36cf4cefe8495d520a7d71918ea88c448a26ad4ab7703187a15579dc67ed032f.json  query-3706acf3f2dcfdd3db49aa1593c5770834294375a6d64a47398f551bd013bd4e.json  query-383e55e56a2c377e2d78e70c9085179e644e84a1686c275a87f37076335c8b8b.json  query-3a5f3aeb345c34cad6eab2e3c554bff9d3aca8ec1249b465df9b141b08d458c1.json  query-3cd6010a14e7892c563b92478a523e8ca4250c31bdd2758de86cffeeb89a63e9.json  query-3f777ce4d6f7ce06ae13495dd01afccf2796a0148f3750376ca31966e05af00f.json  query-4deff85fdeccd8d8a35d011a89ecb2b9c84ead3868f28ea82fc537a79876f2b3.json  query-528be1ac4f99c4b7c10e00ceaff447870fb9bb5a5c91ae691298df60b0312610.json  query-5371f928066141226cb48f250990909b05b3e44913a632677bf5dbbf298303be.json  query-57c9620062473a3cc58d71c219a2120c6826625e095c0430c452fddad40da4a1.json  query-5be4d369ef9bd1835fc81d78e3081a41b6c9886276c0a4f73bd482873e49e482.json  query-5c4745a7e6ad78f9c5d991755eb4f911c76f63dd34dfaf2e662cea7d8e2c9fa7.json  query-610e758677c13d2532987e7824737738b39074e74e655a224f4c953a925ae68d.json  query-618a0a36fcdb55f7fb615e24d5003334ecf6deb3bc792fa72e31c76c6c7d8a8b.json  query-648cdedf72c05e4d0238fecda9a5555c363161dccc4039cd464f51114e4f5604.json  query-664fe249f7469a8d3684f8af9ffb5ff20650fad5fcc43fd9001523280303a39c.json  query-6f8f78517f74bcf3c323f6828b472f5abc0673d0923f748f53912bb9a99be77b.json  (+41 more)
pmrdb_sqlite/src/: impls.rs  lib.rs
pmrmeta/: Cargo.toml
pmrmeta/src/: cellml.rs  citation.rs  cli.rs  error.rs  lib.rs  read.rs  xml.rs
pmrmeta/tests/: test_cellml.rs  test_citation.rs  utils.rs
pmrmodel/: Cargo.toml  README.md  sqlx-data.json  sqlx_prepare.sh
pmrmodel/.sqlx/: query-000f94dbcbf6d5b6129e2db0cccf71bd6fb00b6034042dc3723fff0f2e2059b7.json  query-01f78afe055fb726974c301c878956beafac127711a629c196c6a1abc3a03080.json  query-02d344d0d4eeb7a9b9cafc3a08bfacad37940185eb3e471724aa2c44027fa7a1.json  query-057f1e99d23f950948a94de6ca417042e661331984a813c5c68e6708bb1a4356.json  query-087efcaf925952c0e481d1214494f93ab43532885c643d57c56a57e0a1f77527.json  query-09209fcadde787d877a95547df6094dfe8cfd5a5b3f53033886c0bae63136626.json  query-09bd63143fda1fca37ff02f4fcb060a857d4e2fd37f6b85ffb372d71c1bece1e.json  query-09cfa3f46a3288de5a8f1e1f4e28cdeca1efa674477c366f28360164b3a58e97.json  query-0a0ed5da607fa00a0bfa53fbf890ee8b9d757d0671073a96b0597a079fb0a218.json  query-0ba3b972f857c643b4dd4d11919f279e524f81ba519a7561b3a1aeb21deed1bf.json  query-0db73a0438500bc4dca4416a51f408afb286afbb5126a4c5bd62700896cb48a6.json  (+103 more)
pmrmodel/src/: lib.rs  model.rs  test.rs  utils.rs
pmrmodel_base/: Cargo.toml  README.md
pmrrbac/: Cargo.toml  README.md
pmrrepo/: .env  Cargo.toml  README.md
pmrtqs/: Cargo.toml  README.md
testing/: Cargo.toml
(+340 files in other folders)
