[workspace]
members = [
    "pmrac",
    "pmrapp",
    "pmrctrl",
    "pmrcore",
    "pmrmodel",
    "pmrrbac",
    "pmrrepo",
    "pmrtqs",
    "testing",
]
default-members = [
    "pmrac",
    "pmrctrl",
    "pmrcore",
    "pmrmodel",
    "pmrrbac",
    "pmrrepo",
    "pmrtqs",
    "testing",
]
resolver = "2"

[workspace.dependencies]
pmrac = { path = "./pmrac", version = "0.0.1" }
pmrapp = { path = "./pmrapp", version = "0.0.1" }
pmrctrl = { path = "./pmrctrl", version = "0.0.1" }
pmrmodel = { path = "./pmrmodel", version = "0.0.1" }
pmrcore = { path = "./pmrcore", version = "0.0.1" }
pmrrbac = { path = "./pmrrbac", version = "0.0.1" }
pmrrepo = { path = "./pmrrepo", version = "0.0.1" }
pmrtqs = { path = "./pmrtqs", version = "0.0.1" }

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
