[workspace]
members = [
    "collection_json",
    "pmr2-migration",
    "pmrac",
    "pmrapp",
    "pmrmeta",
    "pmrapp/e2e",
    "pmrctrl",
    "pmrcore",
    "pmrdb",
    "pmrdb_sqlite",
    "pmrmodel",
    "pmrrbac",
    "pmrrepo",
    "pmrtqs",
    "testing",
]
default-members = [
    "collection_json",
    "pmr2-migration",
    "pmrac",
    "pmrctrl",
    "pmrcore",
    "pmrdb",
    "pmrdb_sqlite",
    "pmrmeta",
    "pmrmodel",
    "pmrrbac",
    "pmrrepo",
    "pmrtqs",
    "testing",
]
resolver = "2"

[workspace.dependencies]
collection_json = { path = "./collection_json", version = "0.0.1" }
pmr2-migration = { path = "./pmr2-migration", version = "0.0.1" }
pmrac = { path = "./pmrac", version = "0.0.1" }
pmrapp = { path = "./pmrapp", version = "0.0.1" }
pmrmeta = { path = "./pmrbin", version = "0.0.1" }
pmrcore = { path = "./pmrcore", version = "0.0.1" }
pmrctrl = { path = "./pmrctrl", version = "0.0.1" }
pmrdb = { path = "./pmrdb", version = "0.0.1" }
pmrdb_sqlite = { path = "./pmrdb_sqlite", version = "0.0.1" }
pmrmodel = { path = "./pmrmodel", version = "0.0.1" }
pmrrbac = { path = "./pmrrbac", version = "0.0.1" }
pmrrepo = { path = "./pmrrepo", version = "0.0.1" }
pmrtqs = { path = "./pmrtqs", version = "0.0.1" }

ammonia = "4"
anyhow = "1.0.0"
argon2 = "0.5.3"
async-recursion = "1.0.0"
async-std = "1.5.0"
async-trait = "0.1.50"
axum = "0.8"
axum-extra = "0.10.0"
axum-login = "0.18.0"
axum-login-bearer = "0.1.0"
bytemuck = "1.19.0"
casbin = "2.5.0"
chrono = "0.4.31"
clap = "4.2"
console_error_panic_hook = "0.1"
dotenvy = "0.15.0"
enumset = "1.1.5"
futures = "0.3"
git2 = "0.13"
gix = "0.77"
gloo-timers = "0.3.0"
gloo-utils = "0.2.0"
html-escape = "0.2.13"
http = "1"
itertools = "0.14"
js-sys = "0.3.69"
leptos = "0.8.12"
leptos_axum = "0.8.6"
leptos_meta = "0.8.5"
leptos_router = "0.8.9"
leptos_sync_ssr = "0.1.0"
log = "0.4"
mime_guess = "2.0.4"
mockall = "0.10.2"
num_enum = "0.6.1"
oxiri = "0.2.11"
oxigraph = { version = "0.5.2", default-features = false }
parking_lot = "0.12"
paw = "1.0"
rand = "0.8.5"
regex = "1.11.1"
send_wrapper = "0.6.0"
serde = "1.0.59"
serde_json = "1.0.59"
serde_urlencoded = "0.7.1"
sqlx = "0.8.0"
stderrlog = "0.5.1"
structopt = "0.3"
tempfile = "3.1.0"
test-binary = "3.0.2"
textwrap-macros = "0.3.0"
thiserror = "1.0"
time = "0.3.36"
toml = "0.9.5"
tokio = "1.35"
tokio-stream = "0.1.5"
tokio-util = "0.7.11"
tower = "0.4"
tower-cookies = "0.11.0"
tower-http = "0.5"
tower-layer = "0.3.2"
tower-service = "0.3.2"
tower-sessions = "0.14.0"
tracing = "0.1"
url = "2.5.4"
utoipa = "5.4.0"
utoipa-swagger-ui = "9.0"
wasm-bindgen = "0.2.108"
web-sys = "0.3.69"
xee-xpath = "0.1.5"

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
