[package]
name = "pmr2-migration"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
dotenvy = { workspace = true }
pmrac = { workspace = true }
pmrcore = { workspace = true }
pmrdb = { workspace = true }
pmrdb_sqlite = { workspace = true, optional = true }
pmrctrl = { workspace = true }
pmrmodel = { workspace = true }
pmrrepo = { workspace = true }
serde = { workspace = true, features = ["serde_derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true }
stderrlog = { workspace = true }
tokio = { workspace = true, features = ["sync", "fs"] }

[features]
sqlite = [
    "dep:pmrdb_sqlite",
    "pmrdb/sqlite",
]
