[package]
name = "pmrac"
version = "0.0.1"

authors = ["Tommy Yu <tommy.yu@auckland.ac.nz>"]
edition = "2021"

[dependencies]
async-trait = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
argon2 = { workspace = true, features = ["std"] }
axum-login = { workspace = true, optional = true }
casbin = { workspace = true, optional = true }
clap = { workspace = true, features = ["derive", "env"], optional = true }
dotenvy = { workspace = true, optional = true }
log = { workspace = true }
pmrcore = { workspace = true, features = [ "display", "server" ] }
pmrmodel = { workspace = true, optional = true }
pmrrbac = { workspace = true }
serde_json = { workspace = true, optional = true }
sqlx = { workspace = true, features = ["sqlite"], optional = true }
stderrlog = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt", "rt-multi-thread"] }

[dev-dependencies]
anyhow = { workspace = true }
async-std = { workspace = true, features = ["attributes"] }
serde_json = { workspace = true }
test-pmr = { path = "../testing", features = [ "ac" ] }

[features]
axum-login = [
    "pmrcore/bytemuck",
    "dep:async-trait",
    "dep:axum-login",
]
bin = [
    "anyhow",
    "clap",
    "dotenvy",
    "pmrcore/clap",
    "pmrcore/display",
    "pmrmodel",
    "serde_json",
    "sqlx",
    "stderrlog",
]
casbin = [
    "dep:casbin",
    "pmrrbac/casbin",
]

[lib]

[[bin]]
name = "pmrac"
path = "src/bin/pmrac.rs"
required-features = ["bin"]
