[package]
name = "pmrac"
version = "0.0.1"

authors = ["Tommy Yu <tommy.yu@auckland.ac.nz>"]
edition = "2024"

[dependencies]
async-trait = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
argon2 = { workspace = true, features = ["std"] }
axum-login = { workspace = true, optional = true }
casbin = { workspace = true, optional = true }
clap = { workspace = true, features = ["derive", "env"], optional = true }
dotenvy = { workspace = true, optional = true }
http = { workspace = true, optional = true }
log = { workspace = true }
pmrcore = { workspace = true, features = [ "display", "server" ] }
pmrdb = { workspace = true }
pmrmodel = { workspace = true, optional = true }
pmrrbac = { workspace = true }
serde_json = { workspace = true, optional = true }
stderrlog = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt", "rt-multi-thread"] }
tower-cookies = { workspace = true, optional = true }
tower-layer = { workspace = true, optional = true }
tower-service = { workspace = true, optional = true }
tower-sessions = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
async-std = { workspace = true, features = ["attributes"] }
serde_json = { workspace = true }
test-pmr = { path = "../testing", features = [ "ac" ] }

[features]
axum-login = [
    "pmrcore/bytemuck",
    "dep:async-trait",
    "dep:axum-login",
    "dep:http",
    "dep:tower-cookies",
    "dep:tower-layer",
    "dep:tower-service",
    "dep:tower-sessions",
]
bin = [
    "anyhow",
    "clap",
    "dotenvy",
    "pmrcore/clap",
    "pmrcore/display",
    "pmrdb/sqlite",
    "pmrmodel",
    "serde_json",
    "stderrlog",
]
casbin = [
    "dep:casbin",
    "pmrrbac/casbin",
]
sqlite = [
    "pmrdb/sqlite",
]

[lib]

[[bin]]
name = "pmrac"
path = "src/bin/pmrac.rs"
required-features = ["bin"]
