[package]
name = "pmrbin"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
dotenvy = { workspace = true }
pmrcore = { workspace = true }
pmrctrl = { workspace = true }
pmrdb = { workspace = true }
pmrmodel = { workspace = true }
stderrlog = { workspace = true }
tokio = { workspace = true, features = ["sync", "fs"] }

[features]
sqlite = [
    "pmrctrl/sqlite",
    "pmrdb/sqlite",
]
