[package]
name = "pmrcore"
version = "0.0.1"

authors = ["Tommy Yu <tommy.yu@auckland.ac.nz>"]
edition = "2021"

[dependencies]
async-trait = "0.1.50"
chrono = { version = "0.4", optional = true }
clap = { version = "4.2", features = [ "derive", "env" ], optional = true }
gix = { version = "^0.58", optional = true }
log = { version = "0.4" }
mime_guess = { version = "2.0.4", optional = true }
num_enum = "0.6.1"
serde = { version = "1.0.59", features = ["serde_derive"] }
serde_json = "1.0.59"
sqlx = { version = "0.8.0", features = ["sqlite"], optional = true }
tokio = { version = "1.35", features = ["macros", "process"], optional = true }
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0.0"
async-std = { version = "1.5.0", features = [ "attributes" ] }
mockall = "0.10.2"
tempfile = "3.1.0"
test-binary = "3.0.2"
test-pmr = { path = "../testing" }

[features]
clap = ["dep:clap"]
git = ["dep:gix", "dep:mime_guess"]
display = ["dep:chrono"]
sqlx = ["dep:sqlx"]
tokio = ["dep:tokio"]

[lib]
