[package]
name = "pmrcore"
version = "0.0.1"

authors = ["Tommy Yu <tommy.yu@auckland.ac.nz>"]
edition = "2021"

[dependencies]
async-trait = { workspace = true }
bytemuck = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
clap = { workspace = true, features = ["derive", "env"], optional = true }
enumset = { workspace = true }
gix = { workspace = true, optional = true }
log = { workspace = true }
mime_guess = { workspace = true, optional = true }
num_enum = { workspace = true }
rand = { workspace = true, optional = true }
serde = { workspace = true, features = ["serde_derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["sqlite"], optional = true }
tokio = { workspace = true, features = ["macros", "process"], optional = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
async-std = { workspace = true, features = ["attributes"] }
mockall = { workspace = true }
tempfile = { workspace = true }
test-binary = { workspace = true }
test-pmr = { path = "../testing", features = [ "core" ] }

[features]
bytemuck = ["dep:bytemuck"]
clap = ["dep:clap"]
git = ["dep:gix", "dep:mime_guess"]
chrono = ["dep:chrono", "test-pmr/chrono"]
display = ["chrono"]
# group all server-only dependencies to this feature.
server = ["bytemuck", "session", "chrono"]
session = ["dep:rand"]
sqlx = ["dep:sqlx"]
tokio = ["dep:tokio"]
testing = ["tokio/rt"]

[lib]
