[package]
name = "pmrctrl"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
dotenvy = { workspace = true }
futures = { workspace = true }
log = { workspace = true, features = ["std", "serde"] }
parking_lot = { workspace = true }
pmrac = { workspace = true }
pmrcore = { workspace = true }
pmrdb = { workspace = true }
pmrmodel = { workspace = true }
pmrrbac = { workspace = true }
pmrrepo = { workspace = true }
pmrtqs = { workspace = true }
serde = { workspace = true, features = ["serde_derive"] }
serde_json = { workspace = true }
stderrlog = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "fs"] }
toml = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tempfile = { workspace = true }
test-binary = { workspace = true }
test-pmr = { path = "../testing", features = ["platform"] }

[features]
sqlite = [
    "pmrdb/sqlite",
]
