[package]
name = "pmrdb_sqlite"
version = "0.0.1"
authors = ["Tommy Yu <tommy.yu@auckland.ac.nz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
log = { workspace = true, features = ["std", "serde"] }
parking_lot = { workspace = true }
pmrcore = { workspace = true, features = ["sqlx", "display", "server"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["runtime-async-std-native-tls", "sqlite"] }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
async-std = { workspace = true, features = ["attributes"] }
mockall = { workspace = true }
tempfile = { workspace = true }
test-pmr = { path = "../testing", features = ["model", "rand"] }
