[package]
name = "pmrmeta"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
dotenvy = { workspace = true }
oxiri = { workspace = true }
oxigraph = { workspace = true }
pmrcore = { workspace = true }
pmrctrl = { workspace = true }
pmrdb = { workspace = true }
pmrmodel = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
stderrlog = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "fs"] }
xee-xpath = { workspace = true }

[features]
sqlite = [
    "pmrctrl/sqlite",
    "pmrdb/sqlite",
]
