[package]
name = "pmrmodel"
version = "0.1.0"
authors = ["Tommy Yu <tommy.yu@auckland.ac.nz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = { version = "1.5.0", features = [ "attributes" ] }
async-trait = "0.1.50"
chrono = "0.4"
enum_primitive = "*"
futures = "0.3"
log = { version = "0.4", features = ["std", "serde"] }
pmrmodel_base = { version = "0.1", features = ["sqlx"] }
serde = "1.0.59"
serde_json = "1.0.59"
sqlx = { version = "0.6.2", features = [ "runtime-async-std-native-tls", "sqlite", "offline" ] }
textwrap-macros = "0.3.0"

[dev-dependencies]
mockall = "0.10.2"
tempfile = "3.1.0"
