[package]
name = "pmrmodel"
version = "0.0.1"
authors = ["Tommy Yu <tommy.yu@auckland.ac.nz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
chrono = "0.4.31"
futures = "0.3"
itertools = "0.11"
log = { version = "0.4", features = ["std", "serde"] }
parking_lot = "0.12"
pmrcore = { version = "0.0.1", features = ["sqlx", "display"] }
serde = "1.0.59"
serde_json = "1.0.59"
sqlx = { version = "0.8.0", features = [ "runtime-async-std-native-tls", "sqlite" ] }
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0.0"
async-std = { version = "1.5.0", features = [ "attributes" ] }
mockall = "0.10.2"
tempfile = "3.1.0"
test-pmr = { path = "../testing", features = ["chrono"] }
