[package]
name = "pmrmodel_base"
version = "0.1.0"

authors = ["Tommy Yu <tommy.yu@auckland.ac.nz>"]
edition = "2021"

[dependencies]
chrono = "0.4"
enum_primitive = "*"
serde = { version = "1.0.59", features = ["serde_derive"] }
serde_json = "1.0.59"
sqlx = { version = "0.6.2", features = [], optional = true }

[features]
sqlx = ["dep:sqlx"]

[lib]
