[package]
name = "pmrrbac"
version = "0.1.0"

authors = ["Tommy Yu <tommy.yu@auckland.ac.nz>"]
edition = "2021"

[dependencies]
log = { version = "0.4" }
casbin = { version = "2.5.0" }
pmrcore = { version = "0.1", features = ["display"] }
thiserror = "1.0"
tokio = { version = "1.35", features = ["fs", "io-util", "macros", "rt"] }

[dev-dependencies]
anyhow = "1.0.0"

[features]

[lib]
