[package]
name = "pmrrbac"
version = "0.0.1"

authors = ["Tommy Yu <tommy.yu@auckland.ac.nz>"]
edition = "2021"

[dependencies]
log = { version = "0.4" }
casbin = { version = "2.5.0" }
pmrcore = { workspace = true, features = ["display"] }
thiserror = "1.0"
tokio = { version = "1.35", features = ["fs", "io-util", "macros", "rt"] }

[dev-dependencies]
anyhow = "1.0.0"
serde_json = "1.0.59"

[features]

[lib]
