[package]
name = "pmrrbac"
version = "0.0.1"

authors = ["Tommy Yu <tommy.yu@auckland.ac.nz>"]
edition = "2021"

[dependencies]
log = { workspace = true }
casbin = { workspace = true, optional = true }
pmrcore = { workspace = true, features = ["display"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt"] }

[dev-dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }

[features]
casbin = ["dep:casbin"]

[lib]
