[package]
name = "pmrrepo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-recursion = "1.0.0"
dotenvy = "0.15"
futures = "0.3"
git2 = "0.13"
gix = "^0.48"
log = { version = "0.4", features = ["std", "serde"] }
paw = "1.0"
pmrcore = { version = "0.1", features = ["sqlx", "git"] }
pmrmodel = "0.1"
serde = "1.0.59"
serde_json = "1.0.59"
sqlx = { version = "0.7.0", features = ["sqlite"] }
stderrlog = "0.5.1"
structopt = { version = "0.3", features = ["paw"] }
thiserror = "1.0"

[dev-dependencies]
async-std = { version = "1.5.0", features = [ "attributes" ] }
async-trait = "0.1.50"
mockall = "0.10.2"
tempfile = "3.1.0"
textwrap-macros = "0.3.0"
test-pmr = { path = "../testing" }
