[package]
name = "pmrrepo"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-std = { workspace = true, features = ["attributes"] }
async-recursion = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
git2 = { workspace = true }
gix = { workspace = true }
log = { workspace = true, features = ["std", "serde"] }
paw = { workspace = true }
pmrcore = { workspace = true, features = ["sqlx", "git"] }
pmrdb = { workspace = true }
pmrmodel = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["sqlite"] }
stderrlog = { workspace = true }
structopt = { workspace = true, features = ["paw"] }
thiserror = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
mockall = { workspace = true }
tempfile = { workspace = true }
textwrap-macros = { workspace = true }
test-pmr = { path = "../testing", features = ["repo"] }
