[package]
name = "pmrtqs"
version = "0.0.1"
authors = ["Tommy Yu <tommy.yu@auckland.ac.nz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = { version = "1.5.0", features = [ "attributes" ] }
async-trait = "0.1.50"
clap = { version = "4.2", features = [ "derive", "env" ] }
dotenvy = "0.15.0"
futures = "0.3"
log = { version = "0.4", features = ["std", "serde"] }
pmrcore = { workspace = true, features = ["sqlx", "display"] }
pmrmodel = { workspace = true }
pmrrepo = { workspace = true }
serde = "1.0.59"
serde_json = "1.0.59"
sqlx = { version = "0.8.0", features = ["sqlite"] }
stderrlog = "0.5.1"
tokio = { version = "1.35", features = [ "rt-multi-thread", "signal", "sync", "time" ] }
tokio-stream = "0.1.5"
tokio-util = { version = "0.7.11", features = [ "rt" ] }
thiserror = "1.0"

[dev-dependencies]
mockall = "0.10.2"
tempfile = "3.1.0"
textwrap-macros = "0.3.0"
